chromeos: makes ServerWindow install pre-target handler using kDefault

Using kSystem means it conflicts with other system level landers, such as
the laser pointer.

BUG=867483
TEST=covered by tests

Change-Id: I40581e6ae8716e333d1e64ecd2ae8ebbcbf1936d
Reviewed-on: https://chromium-review.googlesource.com/1151546
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578438}
Former-commit-id: 78ca7f9dce3d8e346b54ff6aa0be00b268763740