ash/laser/laser_pointer_controller_unittest.cc
@@ -9,6 +9,7 @@
 #include "ash/public/cpp/config.h"
 #include "ash/shell.h"
 #include "ash/test/ash_test_base.h"
+#include "services/ui/ws2/server_window.h"
 #include "ui/events/test/event_generator.h"
 
 namespace ash {
@@ -152,6 +153,27 @@ TEST_F(LaserPointerControllerTest, LaserPointerPrediction) {
   EXPECT_TRUE(controller_test_api_->IsFadingAway());
   EXPECT_EQ(0,
             controller_test_api_->predicted_laser_points().GetNumberOfPoints());
+}
+
+// Test to laser pointer is shown for touches over a remote app.
+TEST_F(LaserPointerControllerTest, LaserPointerWorksWithRemoteApp) {
+  std::unique_ptr<aura::Window> window =
+      CreateTestWindow(gfx::Rect(50, 50, 100, 100));
+  ui::ws2::ServerWindow* server_window =
+      ui::ws2::ServerWindow::GetMayBeNull(window.get());
+  ASSERT_TRUE(server_window);
+  // Setting the client area triggers slightly different logic.
+  server_window->SetClientArea(gfx::Insets(10), std::vector<gfx::Rect>());
+
+  // The laser pointer mode only works with stylus.
+  ui::test::EventGenerator* event_generator = GetEventGenerator();
+  event_generator->EnterPenPointerMode();
+  controller_test_api_->SetEnabled(true);
+
+  event_generator->MoveTouch(gfx::Point(100, 100));
+  EXPECT_FALSE(controller_test_api_->IsShowingLaserPointer());
+  event_generator->PressTouch();
+  EXPECT_TRUE(controller_test_api_->IsShowingLaserPointer());
 }
 
 }  // namespace ash
